@@ -2,8 +2,13 @@
 
 	* vc.el (vc-dir), vc-hooks.el: Tweak the VC directory bindings.
 	These are now documented in the manual.
-	* vc-dispatcher.el (vc-dir-update, vc-dir-parent-marked-p, 
+	* vc-dispatcher.el (vc-dir-update, vc-dir-parent-marked-p,
 	vc-dir-children-marked-p): Remove the vc-dir-insert-directories global.
+
+	* vc-dispatcher.el (vc-dispatcher-selection-set): Allow callers to
+	pass in an observer flag that says no buffer sync is required.
+	* vc.el (vc-deduce-fileset, vc-print-log, vc-version-diff): Use
+	the observer flag.
 
 2008-05-09  Michael Albinus  <michael.albinus@gmx.de>
 
